--- a/css/tema4.css
+++ b/css/tema4.css
@@ -38,6 +38,7 @@
   text-align: center;
   font-weight: 900;
   margin-bottom: 10px;
+  color: #ff3b30;
 }
 
 .tema4-page .process-box__subtitle {
@@ -88,6 +89,7 @@
 .tema4-page .tema-learn__title {
   font-weight: 900;
   margin-bottom: 12px;
+  color: #ff3b30;
 }
 
 .tema4-page .tema-learn__lead {
