--- a/css/om-mig.css
+++ b/css/om-mig.css
@@ -145,8 +145,8 @@
 
 .rowcard__place {
   font-size: 12px;
-  color: #ff3b30;
-  font-weight: 700;
+  color: brown;
+  font-weight: 300;
   margin-bottom: 6px;
 }
 
@@ -179,8 +179,8 @@
   background: #fff;
   display: grid;
   place-items: center;
-  font-weight: 800;
-  color: #444;
+  font-weight: 500;
+  color: rgb(42, 99, 165);
   box-shadow: 0 10px 22px rgba(0, 0, 0, 0.04);
   font-size: 12px;
   min-width: 140px;
@@ -201,8 +201,8 @@
   background: #fff;
   display: grid;
   place-items: center;
-  font-weight: 800;
-  color: #444;
+  font-weight: 500;
+  color: rgb(42, 99, 165);
   box-shadow: 0 10px 22px rgba(0, 0, 0, 0.04);
   font-size: 12px;
   min-width: 140px;
