--- a/css/tema2.css
+++ b/css/tema2.css
@@ -18,8 +18,9 @@
 .tema-hero__title {
   margin: 35px 0 14px;
   color: black;
-  font-weight: 900;
-  font-size: clamp(24px, 3.2vw, 44px);
+  font-weight: 300;
+  font-size: clamp(20px, 3vw, 36px);
+  margin: 30px 0 60px;
 }
 
 .tema-hero__intro {
@@ -73,7 +74,7 @@
   justify-content: center;
   padding: 14px 26px;
   border-radius: 999px;
-  background: #ff3b30;
+  background: #a29a9a;
   color: #fff;
   font-weight: 800;
   text-decoration: none;
@@ -83,7 +84,7 @@
 
 .btn-red:hover {
   transform: translateY(-2px);
-  background: #e63228;
+  background: rgb(241, 230, 230);
 }
 
 /* SECTION TITLE */
@@ -94,9 +95,9 @@
 
 .tema-section__title {
   margin: 18px 0 10px;
-  font-weight: 900;
+  font-weight: 300;
   font-size: clamp(22px, 2.4vw, 34px);
-  color: #ff3b30;
+  color: brown;
 }
 
 .tema-section__subtitle {
@@ -126,8 +127,8 @@
 
 .card__title {
   margin: 0 0 10px;
-  color: #ff3b30;
-  font-weight: 900;
+  color: brown;
+  font-weight: 300;
   font-size: 16px;
 }
 
@@ -146,8 +147,8 @@
 
 .tema-learn__title {
   margin: 0 0 14px;
-  color: #ff3b30;
-  font-weight: 900;
+  color: brown;
+  font-weight: 300;
   font-size: clamp(20px, 2.3vw, 30px);
 }
 
@@ -184,7 +185,7 @@
 }
 
 .cta__tagline {
-  color: #ff3b30;
+  color: #a29a9a;
   font-weight: 900;
   font-size: 13px;
   letter-spacing: 2px;
@@ -206,7 +207,7 @@
 }
 
 .cta__btn {
-  background: #ff3b30;
+  background: #a29a9a;
   color: #ffffff;
   padding: 12px 22px;
   border-radius: 12px;
@@ -217,7 +218,7 @@
 }
 
 .cta__btn:hover {
-  background: #e63228;
+  background: rgb(241, 230, 230);
   transform: translateY(-2px);
 }
 
