--- a/css/tema3.css
+++ b/css/tema3.css
@@ -4,9 +4,9 @@
    ========================= */
 
 :root {
-  --red: #ff3b30;
-  --red-dark: #e63228;
-  --text: #ff3b30;
+  --red: #a29a9a;
+  --red-dark: rgb(241, 230, 230);
+  --text: brown;
   --muted: rgba(0, 0, 0, 0.6);
   --line: rgba(0, 0, 0, 0.08);
   --bg: #f6f6f6;
@@ -40,12 +40,12 @@ body {
 }
 
 .tema-hero__title {
-  margin: 0 0 16px;
-  font-size: clamp(28px, 3.2vw, 44px);
-  font-weight: 900;
   color: var(--text);
   letter-spacing: -0.4px;
   color: black;
+  font-weight: 300;
+  font-size: clamp(20px, 3vw, 36px);
+  margin: 30px 0 60px;
 }
 
 .tema-hero__intro {
@@ -72,7 +72,7 @@ body {
 .process-box__title {
   text-align: center;
   margin: 0 0 10px;
-  font-weight: 900;
+  font-weight: 300;
   font-size: clamp(22px, 2.6vw, 34px);
   letter-spacing: -0.3px;
 }
@@ -140,7 +140,7 @@ body {
 
 .tema-learn__title {
   margin: 0 0 14px;
-  font-weight: 900;
+  font-weight: 300;
   font-size: 26px;
   letter-spacing: -0.3px;
 }
@@ -216,6 +216,7 @@ body {
 .btn-red:hover {
   transform: translateY(-2px);
   background: var(--red-dark);
+  color: rgb(241, 230, 230);
 }
 
 /* =========================
@@ -259,7 +260,21 @@ body {
 .btn-row {
   justify-content: center;
 }
+cta__btn {
+  background: #a29a9a;
+  color: #ffffff;
+  padding: 12px 22px;
+  border-radius: 12px;
+  font-size: 13px;
+  font-weight: 800;
+  text-decoration: none;
+  transition: 0.2s ease;
+}
 
+.cta__btn:hover {
+  background: rgb(241, 230, 230);
+  transform: translateY(-2px);
+}
 /* =========================
    RESPONSIVE
 ========================= */
