--- a/css/tema4.css
+++ b/css/tema4.css
@@ -17,7 +17,10 @@
 
 .tema4-page .tema-hero__title {
   margin-bottom: 16px;
-  font-weight: 900;
+  font-weight: 300;
+  font-size: clamp(20px, 3vw, 36px);
+  margin: 30px 0 60px;
+  color: black;
 }
 
 .tema4-page .tema-hero__intro {
@@ -36,9 +39,9 @@
 
 .tema4-page .process-box__title {
   text-align: center;
-  font-weight: 900;
+  font-weight: 300;
   margin-bottom: 10px;
-  color: #ff3b30;
+  color: brown;
 }
 
 .tema4-page .process-box__subtitle {
@@ -62,8 +65,8 @@
 }
 
 .tema4-page .process-card__title {
-  color: #ff3b30;
-  font-weight: 900;
+  color: brown;
+  font-weight: 300;
   margin-bottom: 8px;
 }
 
@@ -87,9 +90,9 @@
 }
 
 .tema4-page .tema-learn__title {
-  font-weight: 900;
+  font-weight: 300;
   margin-bottom: 12px;
-  color: #ff3b30;
+  color: brown;
 }
 
 .tema4-page .tema-learn__lead {
@@ -144,7 +147,7 @@
 
   padding: 15px 32px; /* 🔼 større knap */
   border-radius: 12px; /* lidt blødere */
-  background: #ff3b30;
+  background: #a29a9a;
   color: #fff;
 
   font-weight: 800;
@@ -157,9 +160,23 @@
 
 .tema4-page .btn-row .btn-red:hover {
   transform: translateY(-2px);
-  background: #e63228;
+  background: rgb(241, 230, 230);
+}
+cta__btn {
+  background: #a29a9a;
+  color: #ffffff;
+  padding: 12px 22px;
+  border-radius: 12px;
+  font-size: 13px;
+  font-weight: 800;
+  text-decoration: none;
+  transition: 0.2s ease;
 }
 
+.cta__btn:hover {
+  background: rgb(241, 230, 230);
+  transform: translateY(-2px);
+}
 /* RESPONSIVE */
 @media (max-width: 900px) {
   .tema4-page .process-grid {
