--- a/css/tema5.css
+++ b/css/tema5.css
@@ -20,11 +20,11 @@
 }
 
 .tema5-page .tema-hero__title {
-  margin: 10px 0 16px;
   color: black;
-  font-weight: 900;
-  font-size: clamp(26px, 3.2vw, 46px);
   letter-spacing: -0.02em;
+  font-weight: 300;
+  font-size: clamp(20px, 3vw, 36px);
+  margin: 30px 0 60px;
 }
 
 .tema5-page .tema-hero__intro {
@@ -58,8 +58,8 @@
 
 .tema5-page .compare-card__title {
   margin: 2px 0 14px;
-  font-weight: 900;
-  color: #ff3b30;
+  font-weight: 300;
+  color: brown;
   font-size: 18px;
 }
 
@@ -92,9 +92,10 @@
 
 .tema5-page .summary__label {
   margin: 18px 0 6px;
-  color: #ff3b30;
-  font-weight: 900;
+  color: brown;
+  font-weight: 300;
   font-size: 22px;
+  text-align: center;
 }
 
 .tema5-page .summary__label--spaced {
@@ -148,10 +149,9 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-
   padding: 15px 32px; /* 🔼 større knap */
   border-radius: 12px; /* lidt blødere */
-  background: #ff3b30;
+  background: #a29a9a;
   color: #fff;
 
   font-weight: 800;
@@ -164,7 +164,7 @@
 
 .tema5-page .btn-row .btn-red:hover {
   transform: translateY(-2px);
-  background: #e63228;
+  background: rgb(241, 230, 230);
 }
 
 /* RESPONSIVE */
