--- a/css/projekter.css
+++ b/css/projekter.css
@@ -1,6 +1,5 @@
 /* =========================
-   PROJEKTER – LYS TIMELINE
-   (match dit screenshot)
+   PROJEKTER 
    ========================= */
 
 .projects-page {
@@ -23,13 +22,11 @@
   margin: 30px 0 60px;
 }
 
-/* Timeline container */
 .timeline {
   position: relative;
   padding: 10px 0 40px;
 }
 
-/* Midterlinje */
 .timeline::before {
   content: "";
   position: absolute;
@@ -49,7 +46,6 @@
   padding: 55px 0;
 }
 
-/* Venstre/højre opsætning */
 .timeline-item.left .timeline-card {
   grid-column: 1;
   justify-self: end;
@@ -72,7 +68,6 @@
   justify-self: start;
 }
 
-/* Dot */
 .timeline-dot {
   width: 10px;
   height: 10px;
@@ -92,7 +87,6 @@
   text-decoration: none;
 }
 
-/* Billede */
 .timeline-img {
   width: 100%;
   height: 160px;
