--- a/css/tema4.css
+++ b/css/tema4.css
@@ -185,3 +185,10 @@ cta__btn {
     width: min(260px, 70vw);
   }
 }
+
+.tema-devices > * {
+  background: transparent !important;
+  box-shadow: none !important;
+  border: 0 !important;
+  padding: 0 !important;
+}
