--- a/css/projekter.css
+++ b/css/projekter.css
@@ -89,8 +89,9 @@
 
 .timeline-img {
   width: 100%;
-  height: 160px;
-  object-fit: cover;
+  height: auto;
+  max-height: 190px;
+  object-fit: contain;
   border-radius: 10px;
   display: block;
   margin-bottom: 14px;
